--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     
     <div class="quote">
-        <p>This simple and easy-to-use formula can take your videos to the next level. Click the links below if you'd like to learn more.</p>
+        <p>This simple and easy-to-use formula can take your home videos to the next level. Click the links below if you'd like to learn more.</p>
     </div>
     
     <nav>
